# secret-garden

./: .env.example  .gitignore  .mocharc.json  Anchor.toml  Arcium.toml  Cargo.toml  LICENSE  README.md  package.json  railway.json  tsconfig.json
docs/: DEVNET_DEPLOYMENT.md  ERROR_AND_STATUS_REFERENCE.md  OPERATOR_RUNBOOK.md  PLAYER_HELP_REFERENCE.md  PRIVACY_AND_ARCHITECTURE.md
encrypted-ixs/src/: lib.rs
programs/secret-garden/: Cargo.toml
programs/secret-garden/src/: constants.rs  error.rs  instructions.rs  lib.rs  state.rs
programs/secret-garden/src/instructions/: claim_starters.rs  close_round.rs  create_profile.rs  finalize_round.rs  initialize_config.rs  open_round.rs  set_paused.rs  submit_entry.rs
scripts/: auto-cycle.ts  devnet-breeding-state.ts  devnet-deploy.sh  devnet-setup.ts  devnet-state.ts  devnet-upload-circuit.ts  devnet-verify.sh  devnet-verify.ts  migrate-profile.ts  operator.ts
tests/: breeding.devnet.ts  breeding.ts  cancel.ts  competition.ts  hardening.ts  harness.ts  late-callback.ts  scoring.devnet.ts  scoring.ts  secret-garden.ts  trait-mask.devnet.ts
